<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_Event" Id="{ed64d835-b53d-4b27-83e8-11419b03455c}">
    <Declaration><![CDATA[TYPE ST_Event :
STRUCT
	sLogName	: STRING(81);
	eEventName	: E_EventName;
	eModuleID	: E_ModuleID;
	iParam		: ARRAY [1..NO_OF_INT_PARAM] OF DINT;
	sParam		: ARRAY [1..NO_OF_STRING_PARAM] OF STRING;
	bParam		: ARRAY [1..NO_OF_BOOL_PARAM] OF BOOL; 
	dParam		: ARRAY [1..NO_OF_LREAL_PARAM] OF LREAL; 
	sFailReason	: STRING(81);
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>